<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:screenOrientation="portrait">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_quadrocinza_escuro"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_settings_white_48dp"
                android:text="@string/app_dialogo_configurar_medidor_titulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/app_dialogo_configurar_medidor_mensagem"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_dialogo_configurar_medidor_endereco_ip"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_endereco_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/corLetraBranco"
                android:textColorHint="@color/corLetraBranco" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_dialogo_configurar_medidor_rede_nome"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_rede"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/corLetraBranco"
                android:textColorHint="@color/corLetraBranco" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_dialogo_configurar_medidor_rede_senha" />

            <EditText
                android:id="@+id/et_rede_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/corLetraBranco"
                android:textColorHint="@color/corLetraBranco" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tipo_polegada_titulo"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/rb_sensor_meia_polegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_tipo_polegada_meia"
                    android:checked="true"
                    android:textColor="@color/corLetraBranco" />

                <RadioButton
                    android:id="@+id/rb_sensor_uma_polegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/app_tipo_polegada_uma"
                    android:textColor="@color/corLetraBranco" />

                <!--<RadioButton
                    android:id="@+id/rb_sensor_umameia_polegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/app_tipo_polegada_uma_meia"
                    android:textColor="@color/corLetraBranco" />-->
            </RadioGroup>

            <Button
                android:id="@+id/bt_confirmar"
                style="@style/Button.Verde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_botao_confirmar" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>