<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_identificacao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context="agrisolus.com.br.agconnect.IdentificacaoActivity">

    <FrameLayout
        android:id="@+id/layoutLogo"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_quadrocinza_escuro">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_logo_ag_connect"
                tools:scaleType="fitCenter" />

        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragmentoEmpresa"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutLogo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_quadrocinza_escuro"
            android:padding="20dp">

            <Button
                android:id="@+id/btnLoginSair"
                style="@style/Button.Vermelho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:text="@string/app_botao_identificar_sair" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/app_identificacao_nomeacesso"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:id="@+id/edtNomeAcesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_quadrocinza_claro"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/corPreto"
                android:textColorHint="@color/corPreto" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtNomeAcesso"
                android:text="@string/app_identificacao_senhaacesso"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:id="@+id/edtSenhaAcesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:background="@drawable/ic_quadrocinza_claro"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/corPreto"
                android:textColorHint="@color/corPreto" />

            <Button
                android:id="@+id/btnLoginContinuar"
                style="@style/Button.Verde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnLoginSair"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/app_botao_identificar" />


        </RelativeLayout>
    </FrameLayout>

    <fragment
        android:id="@+id/fragmentoEmpresa"
        class="agrisolus.com.br.agconnect.FragmentoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        tools:layout="@layout/frame_empresa" />


</RelativeLayout>
